# MemoReason

./: README.md  TAXONOMY.md  pyproject.toml
docs/: ANNOTATION_INTERFACE.md
scripts/analysis/: audit_model_eval_version_consistency.py  build_judge_match_drop_by_question_type_figure.py  build_partial_replacement_drop_report.py  build_partial_replacement_parametric_shortcut_indicator.py  build_performance_vs_inference_flops_scatter.py  build_question_answer_type_drop_heatmap.py  build_question_answer_type_drop_latex_table.py  build_variant_factual_answer_shortcut_report.py  compute_human_annotation_edit_stats.py  plot_partial_replacement_performance_curves.py  reproduce_paper_results.py
scripts/benchmark/: export_benchmark_documents.py  run_model_evaluation.py
src/: __init__.py
src/core/: __init__.py  annotation_runtime.py  answer_evaluation.py  answer_matching.py  century_expressions.py  document_schema.py  entity_taxonomy.py  implicit_numeric_rules.py  organization_types.py
src/dataset_export/: __init__.py  dataset_paths.py  dataset_record_builder.py  dataset_settings.py  export_workflow.py  factual_dataset.py  fictional_dataset.py
src/document_generation/: __init__.py  century_generation.py  fictional_document_generation.py  fictional_document_renderer.py  fictional_entity_sampler.py  fictional_entity_sampler_common.py  fictional_entity_sampler_named.py  fictional_entity_sampler_numerical.py  fictional_generation_algorithm.py  fictional_organization_names.py  fictional_values.py  generated_variant_yaml.py  generation_exceptions.py  (+7 more)
web/: app.py
(+246 files in other folders)
